--- a/nms/templates/nms/meter_info_detail.html
+++ b/nms/templates/nms/meter_info_detail.html
@@ -7,6 +7,7 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <h4>Meter Info</h4>
+            <a href="{% url 'update_meter_info' meter_info.pk %}" class="btn btn-small btn-primary">Edit</a>
         </div>
         <div class="panel-body">
             <table class="table table-condensed">
@@ -14,6 +15,8 @@
                 <tr><td>Tag</td><td>{{ meter_info.tag }}</td></tr>
                 <tr><td>Pipeline</td><td>{{ meter_info.pipeline }}</td></tr>
                 <tr><td>Service</td><td>{{ meter_info.service }}</td></tr>
+                <tr><td>Longitude</td><td>{{ meter_info.related_location.gps_lon }}</td></tr>
+                <tr><td>Latitude</td><td>{{ meter_info.related_location.gps_lat }}</td></tr>
                 <tr>
                     <td>Meter</td>
                     {% if meter_info.related_meter %}
