--- a/nms/templates/nms/meter_form.html
+++ b/nms/templates/nms/meter_form.html
@@ -8,7 +8,7 @@
       <form class="form-horizontal" method="POST" action="">
         {% csrf_token %}
         {{ form|crispy }}
-        <button class="btn btn-primary">Create</button>
+        <button class="btn btn-primary">Save</button>
       </form>
   </div>
 </div>
