--- a/nms/templates/nms/mode_detail.html
+++ b/nms/templates/nms/mode_detail.html
@@ -7,7 +7,7 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <h4>Mode</h4>
-            <a href="{% url 'update_mode' mode.pk %}" class="btn btn-small btn-primary">Edit</a>
+            <a href="{% url 'update_mode' mode.pk %}" class="btn btn-sm btn-primary">Edit</a>
         </div>
         <div class="panel-body">
             <table class="table table-condensed">
