--- a/nms/templates/nms/meter_form.html
+++ b/nms/templates/nms/meter_form.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-6 col-md-offset-3">
       <form class="form-horizontal" method="POST" action="">
         {% csrf_token %}
         {{ form|crispy }}
