Edit button in tower detail page

--- a/nms/templates/nms/tower_detail.html
+++ b/nms/templates/nms/tower_detail.html
@@ -8,6 +8,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">
 	Tower Details
+	<a href="{% url 'update_tower' pk=tower.pk %}" class="btn btn-default btn-sm">Edit</a>
       </div>
       <div class="panel-body">
 	<table class="table table-condensed">
