--- a/nms/templates/nms/well_list.html
+++ b/nms/templates/nms/well_list.html
@@ -4,6 +4,14 @@
 
 {% block body %}
 <div class="row">
+    <div class="col-md-2">
+        <a type="button" class="btn btn-default" aria-label="Create Well" href="{% url 'create_well' %}">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+        </a>
+    </div>
+    <div class="col-md-10"></div>
+</div>
+<div class="row">
   <div class="col-md-12">
     {% render_table table %}
   </div>
