Renaming create meter to modbus setting

--- a/nms/templates/nms/meter_info_detail.html
+++ b/nms/templates/nms/meter_info_detail.html
@@ -25,7 +25,7 @@
                     </td>
                     {% else %}
                     <td>
-            <a class="btn btn-default btn-sm" href="{% url 'create_meter' pk=meter_info.pk %}">Create Meter</a>
+            <a class="btn btn-default btn-sm" href="{% url 'create_meter' pk=meter_info.pk %}">Modbus Settings</a>
                     </td>
                     {% endif %}
                 </tr>
