--- a/nms/templates/nms/tower_detail.html
+++ b/nms/templates/nms/tower_detail.html
@@ -8,7 +8,11 @@
     <div class="panel panel-default">
       <div class="panel-heading">
 	Tower Details
-	<a href="{% url 'update_tower' pk=tower.pk %}" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-pencil"></span></a>
+	{% if user.is_staff %}
+	<a href="{% url 'update_tower' pk=tower.pk %}" class="btn btn-default btn-sm">
+	  <span class="glyphicon glyphicon-pencil"></span>
+	</a>
+	{% endif %}
       </div>
       <div class="panel-body">
 	<table class="table table-condensed">
