--- a/nms/templates/nms/user_list.html
+++ b/nms/templates/nms/user_list.html
@@ -4,6 +4,15 @@
 
 {% block body %}
 <div class="row">
+  <div class="col-md-2">
+    <a href="{% url 'create_user' %}" class="btn btn-sm btn-default">
+      <span class="glyphicon glyphicon-plus"></span>
+    </a>
+  </div>
+  <div class="col-md-10"></div>
+</div>
+
+<div class="row">
   <div class="col-md-12">
     {% render_table table %}
   </div>
