--- a/nms/templates/nms/meter_info_detail.html
+++ b/nms/templates/nms/meter_info_detail.html
@@ -1,6 +1,14 @@
 {% extends 'base.html' %}
 {% load django_tables2 %}
 
+{% block sidebar %}
+    {% include '_sidebar.html' with flowmetermenu="active" %}
+{% endblock %}
+
+{% block page_title %}
+Flow Meter Detail
+{% endblock %}
+
 {% block body %}
 <div class="row">
   <div class="col-md-12">
