--- a/nms/templates/nms/meterinfo_form.html
+++ b/nms/templates/nms/meterinfo_form.html
@@ -1,15 +1,30 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
+{% block sidebar %}
+    {% include '_sidebar.html' with flowmetermenu="active" %}
+{% endblock %}
+
+{% block page_title %}
+New Flow Meter
+{% endblock %}
 
 {% block body %}
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-      <form class="form-horizontal" method="POST" action="">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button class="btn btn-primary">Save</button>
-      </form>
-  </div>
+    <div class="col-md-6 col-md-offset-3">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="panel-title">New Meter Details</div>
+            </div>
+            <div class="panel-body">
+                <form class="form-horizontal" method="POST" action="">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-primary">Save</button>
+                </form>
+            </div>
+        </div>
+    
+    </div>
 </div>
 {% endblock %}
