--- a/nms/templates/nms/mode_form.html
+++ b/nms/templates/nms/mode_form.html
@@ -1,15 +1,32 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
+{% block sidebar %}
+    {% include '_sidebar.html' with wirlessmodemenu="active" %}
+{% endblock %}
+
+{% block page_title %}
+Wireless Mode
+{% endblock %}
+
 
 {% block body %}
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-      <form class="form-horizontal" method="POST" action="">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button class="btn btn-primary">Save</button>
-      </form>
-  </div>
+    <div class="col-md-6 col-md-offset-3">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="panel-title">
+                    New Mode Details
+                </div>
+            </div>
+            <div class="panel-body">
+                <form class="form-horizontal" method="POST" action="">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-primary">Save</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
