--- a/nms/templates/nms/tower_form.html
+++ b/nms/templates/nms/tower_form.html
@@ -1,15 +1,30 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
+{% block sidebar %}
+    {% include '_sidebar.html' with towermenu="active" %}
+{% endblock %}
+
+{% block page_title %}
+Add New Tower
+{% endblock %}
+
 
 {% block body %}
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-      <form class="form-horizontal" method="POST" action="">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button class="btn btn-primary">Save</button>
-      </form>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">New Tower Details</h4>
+        </div>
+        <div class="panel-body">
+              <form class="form-horizontal" method="POST" action="">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button class="btn btn-primary">Save</button>
+              </form>
+        </div>
+    </div>
   </div>
 </div>
 {% endblock %}
