--- a/nms/templates/nms/user_list.html
+++ b/nms/templates/nms/user_list.html
@@ -1,6 +1,14 @@
 {% extends 'base.html' %}
 {% load django_tables2 %}
 
+{% block sidebar %}
+    {% include '_sidebar.html' with usersmenu="active" %}
+{% endblock %}
+
+{% block page_title %}
+Users
+{% endblock %}
+
 
 {% block body %}
 <div class="row">
@@ -14,7 +22,11 @@
 
 <div class="row">
   <div class="col-md-12">
-    {% render_table table %}
+    <div class="panel">
+        <div class="panel-body">
+            {% render_table table %}
+        </div>
+    </div>
   </div>
 </div>
 {% endblock %}
