--- a/nms/templates/nms/tower_detail.html
+++ b/nms/templates/nms/tower_detail.html
@@ -15,12 +15,13 @@ Tower Detail
   <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-	Tower Details
-	{% if user.is_staff %}
-	<a href="{% url 'update_tower' pk=tower.pk %}" class="btn btn-default btn-sm">
-	  <span class="glyphicon glyphicon-pencil"></span>
-	</a>
-	{% endif %}
+	<div class="panel-title">Tower Details 
+        {% if user.is_staff %}
+        <a href="{% url 'update_tower' pk=tower.pk %}" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-pencil"></span>
+        </a>
+        {% endif %}
+    </div>
       </div>
       <div class="panel-body">
 	<table class="table table-condensed">
@@ -56,7 +57,7 @@ Tower Detail
   <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-	Wells
+	   <div class="panel-title">Wells</div>
       </div>
       <div class="panel-body">
 	{% render_table table %}
