fixing the add new station button

--- a/nms/templates/nms/station_list.html
+++ b/nms/templates/nms/station_list.html
@@ -6,21 +6,17 @@
 {% endblock %}
 
 {% block page_title %}
-Station List
+Station List 
+{% if user.is_staff %}
+<a type="button" class="btn btn-default btn-sm" aria-label="Create Station" href="{% url 'create_station' %}">
+    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+</a>
+{% endif %}
 {% endblock %}
 
 
 {% block body %}
-{% if user.is_staff %}
-<div class="row">
-    <div class="col-md-2">
-        <a type="button" class="btn btn-default" aria-label="Create Station" href="{% url 'create_station' %}">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-        </a>
-    </div>
-    <div class="col-md-10"></div>
-</div>
-{% endif %}
+
 <div class="row">
   <div class="col-md-12">
     <div class="panel">
