--- a/nms/templates/nms/well_detail.html
+++ b/nms/templates/nms/well_detail.html
@@ -14,10 +14,12 @@ Well Detail
   <div class="col-md-12">
     <div class="panel panel-default">
         <div class="panel-heading">
+      <div class="panel-title">
 	  Well
 	  {% if user.is_staff %}
 	  <a href="{% url 'update_well' pk=well.pk %}" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-pencil"></span></a>
 	  {% endif %}
+      </div>
         </div>
         <div class="panel-body">
             <table class="table table-condensed">
