--- a/nms/templates/nms/meter_info_detail.html
+++ b/nms/templates/nms/meter_info_detail.html
@@ -43,7 +43,51 @@ Flow Meter Detail
             </table>
         </div>
     </div>
+    <div class="panel panel-default">
+        <div class="btn-group btn-group-justified">
+            <a href="#daily" class="btn btn-default" role="button">Daily</a>
+            <a href="#hourly" class="btn btn-default">Hourly</a>
+            <a href="#interval" class="btn btn-default">Interval</a>
+        </div>
+    </div>
+    {% if daily_table %}
+    <div class="panel panel-default" name="daily" id="daily">
+        <div class="panel-heading">
+            <div class="panel-title">
+                Daily
+            </div>
+        </div>
+        <div class="panel-body">
+            {% render_table daily_table %}
+        </div>
+    </div>
+    {% endif %}
+    {% if hourly_table %}
+    <div class="panel panel-default" name="hourly" id="hourly">
+        <div class="panel-heading">
+            <div class="panel-title">
+                Hourly
+            </div>
+        </div>
+        <div class="panel-body">
+            {% render_table hourly_table %}
+        </div>
+    </div>
+    {% endif %}
+    {% if interval_table %}
+    <div class="panel panel-default" name="interval" id="interval">
+        <div class="panel-heading">
+            <div class="panel-title">
+                Interval
+            </div>
+        </div>
+        <div class="panel-body">
+            {% render_table interval_table %}
+        </div>
+    </div>
+    {% endif %}
   </div>
+  <a href="#daily1">test</a>
 </div>
 {% endblock %}
 
