fxing the table overflow issue

--- a/nms/templates/nms/meter_info_detail.html
+++ b/nms/templates/nms/meter_info_detail.html
@@ -59,7 +59,7 @@ Flow Meter Detail
                 Daily
             </div>
         </div>
-        <div class="panel-body">
+        <div class="panel-body table-responsive">
             {% render_table daily_table %}
         </div>
     </div>
@@ -71,7 +71,7 @@ Flow Meter Detail
                 Hourly
             </div>
         </div>
-        <div class="panel-body">
+        <div class="panel-body table-responsive">
             {% render_table hourly_table %}
         </div>
     </div>
@@ -83,7 +83,7 @@ Flow Meter Detail
                 Interval
             </div>
         </div>
-        <div class="panel-body">
+        <div class="panel-body table-responsive">
             {% render_table interval_table %}
         </div>
     </div>
