fixing the graph template

--- a/nms/templates/nms/dashbord.html
+++ b/nms/templates/nms/dashbord.html
@@ -17,14 +17,14 @@ Dashboard
         <div class="panel panel-teal plain">
             <div class="panel-heading">
                 <div class="panel-title">
-                    Total Injection Today - Well
+                    Total Injection Today
                 </div>
             </div>
             <div class="panel-body">
                 <div id="total_injection_well"></div>
             </div>
         </div>
-        <div class="panel panel-teal plain">
+        <!-- <div class="panel panel-teal plain">
             <div class="panel-heading">
                 <div class="panel-title">
                     Total Volume Injected Per Day
@@ -32,6 +32,17 @@ Dashboard
             </div>
             <div class="panel-body">
                 <div id="volume_by_date"></div>
+            </div>
+        </div> -->
+
+        <div class="panel panel-teal plain">
+            <div class="panel-heading">
+                <div class="panel-title">
+                    Total Volume Injected Per Day
+                </div>
+            </div>
+            <div class="panel-body">
+                <div id="area_chart"></div>
             </div>
         </div>
     </div>
