--- a/nms/templates/nms/dashbord.html
+++ b/nms/templates/nms/dashbord.html
@@ -14,7 +14,41 @@ Dashboard
 {% block body %}
 <div class="col-md-12">
     <div class="col-md-8">
-        <div class="panel panel-teal plain">
+        {% for tower in towers %}
+            <div class="col-md-12">
+                <div class="panel panel-teal plain">
+                    <div class="panel-heading">
+                        <div class="panel-title">
+                            {{tower.name}} - ( {{tower}} )
+                        </div>
+                    </div>
+                    <div class="panel-body">
+                        <div class="col-md-3">
+                            <div class="col-md-12">
+                                <div class="tower-thumb">
+                                    <img src="{% static 'images/tower.png' %}" width="100" alt="">
+                                    {% if tower.is_active_today %}
+                                    <div class="tower-status active">
+                                    </div>
+                                    {% else %}
+                                    <div class="tower-status deactive">
+                                    </div>
+                                    {% endif %}
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <br>
+                                <div class="easy-pie-chart-purple" data-percent="65">Volume</div>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="chart_id" data-tower="{{tower.id}}" style="width:400px;height:300px" data-url="{% url 'dashboard_tower_detail_json' pk=tower.pk %}"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+        <!-- <div class="panel panel-teal plain">
             <div class="panel-heading">
                 <div class="panel-title">
                     Total Injection Today
@@ -23,7 +57,7 @@ Dashboard
             <div class="panel-body">
                 <div id="total_injection_well"></div>
             </div>
-        </div>
+        </div> -->
         <!-- <div class="panel panel-teal plain">
             <div class="panel-heading">
                 <div class="panel-title">
@@ -35,7 +69,7 @@ Dashboard
             </div>
         </div> -->
 
-        <div class="panel panel-teal plain">
+        <!-- <div class="panel panel-teal plain">
             <div class="panel-heading">
                 <div class="panel-title">
                     Total Volume Injected Per Day
@@ -44,7 +78,7 @@ Dashboard
             <div class="panel-body">
                 <div id="area_chart"></div>
             </div>
-        </div>
+        </div> -->
     </div>
     <div class="col-md-4">
         <div class="panel panel-teal">
@@ -103,14 +137,55 @@ Dashboard
 </div>
 {% endblock %}
 {% block scripts %}
-<script src="{% static 'js/c3/d3.min.js' %}"></script>
+<script src="{% static 'new_theme/plugins/charts/flot/jquery.flot.custom.js' %}"></script>
+<script src="{% static 'new_theme/plugins/charts/flot/jquery.flot.pie.js' %}"></script>
+<script src="{% static 'new_theme/plugins/charts/flot/jquery.flot.resize.js' %}"></script>
+<script src="{% static 'new_theme/plugins/charts/flot/jquery.flot.time.js' %}"></script>
+<script src="{% static 'new_theme/plugins/charts/flot/jquery.flot.growraf.js' %}"></script>
+<script src="{% static 'new_theme/plugins/charts/flot/jquery.flot.categories.js' %}"></script>
+<script src="{% static 'new_theme/plugins/charts/flot/jquery.flot.stack.js' %}"></script>
+<script src="{% static 'new_theme/plugins/charts/flot/jquery.flot.orderBars.js' %}"></script>
+<script src="{% static 'new_theme/plugins/charts/flot/jquery.flot.tooltip.min.js' %}"></script>
+<script src="{% static 'new_theme/plugins/charts/pie-chart/jquery.easy-pie-chart.js' %}"></script>
+<script src="{% static 'new_theme/plugins/charts/flot/date.js' %}"></script>
+<script src="{% static 'js/c3/c3.min.js' %}"></script>
 <script src="{% static 'js/c3/c3.min.js' %}"></script>
 <script src="{% static 'js/dashboard.js' %}" ></script>
 <script type="text/javascript">
 urls = {
-    dashboard_detail_url: '{% url "dashboard_detail_json" %}'
+    dashboard_detail_url: '{% url "dashboard_detail_json" %}',
 }
-init(urls);
+
+
+// var data_dict = {
+//     2: [ [0, 0], [1, 1] ],
+//     1: [ [0,0], [2,13], [3,65], [4,20]],
+//     3: [ [1, 3], [2, 14.01], [3.5, 3.14] ],
+// }
+
+// $('.chart_id').each(function(index) {
+//     var options = {
+//         lines: { show: true },
+//         points: { show: true }
+//     }
+//     var tower_id = $(this).data('tower')
+//     var tower_url = $(this).data('url')
+//     $.getJSON(tower_url, function(data) {
+//         var list = data.data
+//         var new_list = []
+//         for(var i=0;i<list.length; i++) {
+//             var timestamp = new Date(list[i][0]).getTime()
+//             console.log(list[i])
+//             new_list.push([timestamp, list[i][1]])
+//         }
+//         console.log(new_list)
+//         $.plot($(this), [new_list])
+//     })
+// })
+init();
+
+
+
 </script>
 
 {% endblock %}
