fixing the dashbord graphs

--- a/nms/templates/nms/dashbord.html
+++ b/nms/templates/nms/dashbord.html
@@ -38,7 +38,7 @@ Dashboard
                             </div>
                             <div class="col-md-12">
                                 <br>
-                                <div class="easy-pie-chart-purple" data-percent="65">Volume</div>
+                                <div class="easy-pie-chart-blue" data-percent="65">Volume</div>
                             </div>
                         </div>
                         <div class="col-md-9">
