--- a/nms/templates/nms/station_form.html
+++ b/nms/templates/nms/station_form.html
@@ -15,7 +15,7 @@ Add New Station
   <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default">
         <div class="panel-heading">
-            <h4 class="panel-title">New Station Details</h4>
+            <h4 class="panel-title">New Radio Details</h4>
         </div>
         <div class="panel-body">
             <form class="form-horizontal" method="POST" action="">
