--- a/nms/templates/nms/station_list.html
+++ b/nms/templates/nms/station_list.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block page_title %}
-Station List 
+Radio List 
 {% if user.is_staff %}
 <a type="button" class="btn btn-default btn-sm" aria-label="Create Station" href="{% url 'create_station' %}">
     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
